assets/style/style.css
body{

    margin: 0 auto;
    text-decoration: none;
    font-family: "PT Sans";

}
header{
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    height: auto;
}
.logo{
    position: relative;
    width: 35%;
    height: 800px;
    background-color: #334E60;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    padding: 0 25px;
}
.header_nav{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    background-color: #840032;
}
.nav_container{
    position: relative;
    width: 100%;

}
.nav_link_content{
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    gap: 120px;
    list-style-type: none;
}
.nav_link{
    text-decoration: none;
    color: white;
    padding: 2.5px;
    font-size: 22px;
    text-shadow: 1px 4px 9px #0A0403;
}
.nav_link:hover{
   border-bottom: 2px solid #0CCE6B;
   font-weight: 800;

}
.me{
    position: absolute;
    width: 100%;
    height: 750px;
}
.me_img{
    width: 100%;
    height: 750px;
    object-fit: cover;
    box-shadow: 1px 10px 20px -4px rgba(0,0,0,0.83);
}
.banner{
    position: absolute;
    color: black;
    top: 40%;
    left: 8%;
    line-height: 2%;
    color: white;
}
.banner_title{
    font-size: 45px;
    font-weight: bold;
    text-shadow: 1px 4px 9px #0A0403;
}
.name{
    font-size: 50px;
    font-weight: bold;
    text-shadow: 1px 4px 9px #0A0403;
}
.job_content{
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 350px;
    width: 100%;
    height: 75px;
    background-color: #0CCE6B;
    font-size: 30px;
    font-weight: bold;
    color: white;
    text-shadow: 1px 4px 9px #0A0403;
}

    /*-----------ABOUT-----------*/

    .about_container{
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 300px;
        width: 100%;
        height: 760px;
        background-color: #334E60;
    }
    .background_photo{
        position: relative;
        max-width: 400px;
        max-height: 400px;
        width: 100%;
        height: 400px;
        background-color: #840032;
        border-radius: 15px;
        box-shadow: -3px 13px 20px 0px rgba(0,0,0,0.83);
    }
    .about_portrait{
        position: absolute;
        left: 23%;
        top: 128%;
 
    }
    .portrait_img{
        object-fit: cover;
        width: 400px;
        height: 400px;
        border-radius: 15px;
        box-shadow: -3px 13px 20px 0px rgba(0,0,0,0.83);
    }
    .about_titles{
        width: 30%;
        height: 400px;
        line-height: 1.1rem;
        color: white;
        text-shadow: 1px 4px 9px #0A0403;
    }
    .who_title{
        font-size: 22px;
        font-weight: bold;
        margin-left: 20px;
        line-height: 0.2rem;
        text-shadow: 1px 4px 9px #0A0403;
    }
    .hello_title{
        font-size: 36px;
        font-weight: bold;
        line-height: 0.2rem;
    }
    
    .about_description{
    font-size: 16px;
    }

/*-----------TECHNO-----------*/

.techno{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    background-color: #334E60;
}
.techno_title{
    z-index: 1;
    width: auto;
    height: 20px;
    font-size: 58px;
    font-weight: bold;
    color: white;
    text-shadow: 1px 4px 9px #0A0403;
}
.techno_hr{
    position: absolute;
    z-index: 0;
    top: 85px;
    height: 20px;
    background-color: #0CCE6B;
    width: 311px;
    border: none;
}
.techno_container{
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
    align-items: center;
    justify-content: center;
    margin-top: 150px;
    margin-bottom: 150px;
}
.techno_card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 150px;
    height: 200px;
    background-color: #840032;
    border-radius: 15px;
    box-shadow: 1px 13px 27px -4px rgba(0,0,0,0.83);
    margin-bottom: 100px;
}
.techno_card:hover{
    box-shadow: none;
}
.techno_card img{
    margin-top: 25px;
    margin-bottom: 25px;
    width: 80px;
    height: 80px;
}
.techno_logo_title{
    bottom: 5px;
    font-size: 28px;
    font-weight: 800;
    color: white;
    text-shadow: 1px 4px 9px #0A0403;
}
.techno_card:hover:hover .techno_logo_title{
    text-shadow: none;
}
/*-----------Modal-----------*/

.inactive{
    display: none;
}
.active_background{
    position: fixed;
    display: block;
    top: 0;
    left: 0;
    z-index: 998;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    background-color: #334e60ef;
}
.modal_content{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 999;
    max-width: 600px;
    width: calc(100% - 40%);
    height: auto;
    background-color: white;
    border-radius: 25px;
    overflow: hidden;
}
.modal_close{
    position: absolute;
    top: 20px;
    right: 20px;
    width: 25px;
    height: 25px;
    cursor: pointer;
}
.title_modal{
    width: 100%;
    height: 25px;
    text-align: center;
    margin-bottom: 50px;
}
.go_to{
    width: 310px;
    height: 220px;
    cursor: pointer;
}
.modal_picture_content{
    margin-bottom: 10px;
    border: 1px solid #840032;
}
.modal_img{
    width: 310px;
    height: 220px;
}
.description{
    width: calc(100% - 20%);
    text-align: center;
    font-size: 18px;
    font-weight: bold;
}
.skills{
    width: calc(100% - 10%);
    font-size: 16px;
    margin-bottom: 30px;
}
.go_to{

}
/*-----------WORKS-----------*/

.works{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
}
/* ... */

